<resources>
    <string name="app_name">Personalized Inventory Control App</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="loginPage">Login</string>
    <string name="RegisterPage">Register</string>
    <string name="inventoryh">InventoryH</string>
    <string name="accountnamefield">account:</string>
    <string name="passwordfield">password:</string>
    <string name="Register">register</string>
    <string name="item_image">Item Image</string>
    <string name="inventoryname">Inventory Name</string>
    <string name="manufacture">Manufacture</string>
    <string name="ProductName">productname</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="or">or</string>
    <string name="user_icon">User Icon</string>
    <string name="password_icon">Password Icon</string>
    <string name="logo">Logo</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="barcode_number">Barcode Number</string>
    <string name="add_item_with_scan">Add Item with Scan</string>
    <string name="inventory_record">Inventory Record</string>
    <string name="logout">Logout</string>
    <string name="menu">Menu</string>
    <string name="add">Add</string>
    <string name="url">url</string>
    <string name="Url">url</string>
    <string name="image_url">Image URL</string>
    <string name="add_item">Add Item</string>
    <string name="number">Number</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="username_label">Username:</string>
    <string name="password_label">Password:</string>
    <string name="confirm_password_label">Confirm password</string>
    <string name="email_label">Email:</string>
    <string name="_5_50">5.50</string>
    <string name="add_item_manually">Add item manually</string>
    <string name="username_email">Username/Email</string>
    <string name="item_image_AddInventoryWithScan">Item Image</string>
    <string name="add_inventory_AddInventoryWithScan">Add Inventory</string>
    <string name="new_product_Title">New Product</string>
    <string name="product_AddNewProduct">Product</string>
    <string name="manufacture_AddNewProduct">Manufacture</string>
    <string name="price_AddNewProduct">Price</string>
    <string name="barcode_AddNewProduct">Barcode</string>
    <string name="image_url_AddNewProduct">Image URL</string>
    <string name="add_AddNewProduct">Add</string>
    <string name="add_inventory_Manually">Add Inventory</string>
    <string name="product_Manually">Product</string>
    <string name="manufacture_Manually">Manufacture</string>
    <string name="price_Manually">Price</string>
    <string name="barcode_Manually">Barcode</string>
    <string name="image_url_Manually">Image Url</string>
    <string name="quantity_Manually">Quantity</string>
    <string name="usage_Manually">Usage</string>
    <string name="add_item_Manually">Add Item</string>
    <string name="item_image_viewinventory">Item image</string>
    <string name="product_viewInventory">Product</string>
    <string name="quantity_viewInventory">Quantity</string>
    <string name="usage_viewInventory">Usage</string>
    <string name="notification_time_setting">Notification Time Setting</string>
    <string name="please_select_the_day_of_the_week_and_time_to_recieve_notification">Please select the day of the week and time to recieve notification.</string>
    <string name="time_notificationsetting">Time</string>
    <string name="product_detail">Product</string>
    <string name="manufacture_detail">Manufacture</string>
    <string name="price_detail">Price</string>
    <string name="barcode_detail">Barcode</string>
    <string name="quantity_detail">Quantity</string>
    <string name="usage_detail">Usage</string>
    <string name="update_detail">Update</string>
    <string name="save_notificationTimeSetting">Save</string>
    <string name="edit_detail">Edit</string>
    <string name="add_button_ViewInventory">Add button</string>
    <string name="barcode_scanning_popup">Scanning</string>
    <string name="manually_popup">Manually</string>
    <string name="settings_editSettings">Settings</string>
    <string name="notification_settings">Notification</string>
    <string name="settings">Settings</string>
    <string name="add_button_family_account_linkage">add button</string>
    <string name="shopping_list_title">Shopping List</string>
    <string name="shopping_list_">Shopping List</string>
    <string name="add_quantity_item_detail">Add Quantity</string>
    <string name="minus_quantity_item_detail">Minus Quantity</string>
    <string name="edit_shopping_list_item">Edit Shopping List Item</string>
    <string name="delete_item_from_shopping_list">Delete Item From Shopping List</string>
    <string name="title_preference">Title</string>
    <string name="summary_preference">summary</string>
    <string name="notification_time">Notification Time</string>
    <string name="not_set_preference">Not Set</string>
    <string name="item_name_ShoppingList_layout">Item Name:</string>
    <string name="manufacture_ShoppingList_layout">Manufacture:</string>
    <string name="price_ShoppingList_layout">Price:</string>
    <string name="quantity_ShoppingList_layout">Quantity:</string>
    <string name="update">Update</string>
    <string name="confirm">Confirm</string>
    <string name="manufacture_byScan">Manufacture</string>
    <string name="price_byScan">Price</string>
    <string name="product_byScan">Product</string>
    <string name="barcode_byScan">Barcode</string>
    <string name="quantity_byScan">Quantity</string>
    <string name="usage_byScan">Usage</string>
    <string name="add_item_byScan">Add Item</string>
    <string name="example_mail_com">example@gmail.com</string>
    <string name="linked_family_accounts_list">Linked Family Accounts List</string>
    <string name="username_family_account">Username:</string>
    <string name="email_family_account">Email:</string>
</resources>