<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="183dp"
            android:background="@drawable/background">

            <ImageView
                android:layout_width="325dp"
                android:layout_height="93dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/logo_no_background" />

        </FrameLayout>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        tools:layout_editor_absoluteX="219dp"
        tools:layout_editor_absoluteY="207dp"

        >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/blue_border_rounded_cornwe">


            <TextView
                android:id="@+id/textView"
                android:labelFor="@+id/username"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="13dp"
                android:maxLines="1"
                android:text="@string/username_label"
                android:textSize="15sp"
                 />

            <EditText
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/textView"
                android:autofillHints="Username"
                android:background="@android:color/transparent"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:paddingStart="1dp"
                android:paddingTop="15dp"
                android:paddingEnd="17dp"
                android:paddingBottom="15dp"
                android:textCursorDrawable="@drawable/cursor_color" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12.7dp"
            android:background="@drawable/blue_border_rounded_cornwe">


            <TextView
                android:id="@+id/textView2"
                android:labelFor="@+id/password"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="13dp"
                android:maxLines="1"
                android:text="@string/password_label"
                android:textSize="15sp"
                 />

            <EditText
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/textView2"
                android:autofillHints="Password"
                android:hint="@string/password"
                android:background="@android:color/transparent"
                android:ems="10"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="1dp"
                android:paddingTop="15dp"
                android:paddingEnd="17dp"
                android:paddingBottom="15dp"
                android:textCursorDrawable="@drawable/cursor_color" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12.7dp"
            android:background="@drawable/blue_border_rounded_cornwe">


            <TextView
                android:id="@+id/textView3"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="13dp"
                android:labelFor="@+id/password2"
                android:text="@string/confirm_password_label"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_height="wrap_content"
                android:layout_width="13dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/textView3"
                android:text=":"
                android:textSize="15sp"
                tools:ignore="HardcodedText" />

            <EditText
                android:id="@+id/password2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/textView4"
                android:autofillHints="Password"
                android:background="@android:color/transparent"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="1dp"
                android:paddingTop="15dp"
                android:paddingEnd="17dp"
                android:paddingBottom="15dp"
                android:textCursorDrawable="@drawable/cursor_color" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12.7dp"
            android:background="@drawable/blue_border_rounded_cornwe">


            <TextView
                android:id="@+id/textView5"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="13dp"
                android:labelFor="@+id/email"
                android:maxLines="1"
                android:text="@string/email_label"
                android:textSize="15sp"
                />

            <EditText
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/textView5"
                android:autofillHints="emailAddress"
                android:background="@android:color/transparent"
                android:ems="11"
                android:hint="@string/example_mail_com"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingStart="17dp"
                android:paddingTop="15dp"
                android:paddingEnd="17dp"
                android:paddingBottom="15dp"
                android:textCursorDrawable="@drawable/cursor_color" />
        </RelativeLayout>

        <Button
            android:id="@+id/button3"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="10.7dp"
            android:layout_marginRight="62dp"
            android:background="@drawable/blue_fill__rounded_color"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:onClick="register"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/Register"
            android:textColor="#ffffff"
            android:textSize="12sp" />


        <Button
            android:id="@+id/button4"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="10.7dp"
            android:layout_marginRight="62dp"
            android:background="@drawable/blue_fill__rounded_color"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:onClick="login"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="12sp" />
    </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>